# BusSpy

./: .gitignore  BusSpy.pen  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  main.tsx  styles.css  tauri.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/app-shell/: AppToolbar.tsx  StatusBar.tsx  index.ts
apps/desktop/src/components/help/: HelpTip.tsx
apps/desktop/src/components/update/: AboutDialog.tsx  UpdateChecker.tsx
apps/desktop/src/features/serial-console/components/: FrameMarkerPanel.tsx  ReceivePanel.tsx  SendPanel.tsx  SerialConfigPanel.tsx  index.ts
apps/desktop/src/features/serial-console/hooks/: index.ts  useSerialConsole.ts
apps/desktop/src/features/serial-console/lib/: checksum.ts  constants.ts  format.ts  protocolFrame.ts  sendMemory.ts  types.ts
apps/desktop/src/i18n/: index.tsx
apps/desktop/src/views/serial-console/: SerialConsoleView.tsx  index.ts
docs/: usage.md
