[package]
name = "busspy"
version = "0.1.0"
description = "BusSpy serial port assistant"
authors = ["BusSpy"]
edition = "2021"

[lib]
name = "busspy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
